2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/22_AppelMethodDansMethod.deca
// Description:
//    Programme : appel d'une methode dans une autre methode de la m^ême clase lors de sa definition
// Resultats:
//      Programme correcte syntaxiquement et faux contextuellement 
//
// Historique:
//    cree le 18/01/2024
class A {
    float f;
    float getF()
    {
        return f;
    }
    float get(){
        return this.getF()+1;
    }
}