2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/40_MainInClass.deca
// Description:
//    Programme main dans la definition d'une classe
// Resultats:
//      Programme incorrecte syntaxiquement :8:4: missing '}' at '{'
// Historique:
//    cree le 18/01/2023
class A {
    {
        print("je suis dans main !");
    }
}